Publish new npm version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tokenart",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "",
   "main": "dist/commonjs.js",
   "browser": "dist/browser.js",
@@ -11,7 +11,7 @@
     "build": "rm -rf dist; webpack; npm run emitDeclaration",
     "watch": "rm -rf dist; webpack --watch",
     "emitDeclaration": "tsc src/index.ts --declaration --emitDeclarationOnly -module system -out dist/tokenart.js --moduleResolution node --jsx react-jsx",
-    "prepublishOnly": "node increment-version.js; npm run build; git commit -am \"Publish new npm version\""
+    "prepublishOnly": "node increment-version.js; npm run build; git commit -am \"Publish new npm version\"; git push"
   },
   "repository": {
     "type": "git",
